--- a/ArcDocuments.Core/ArcDocuments.Core.csproj
+++ b/ArcDocuments.Core/ArcDocuments.Core.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="4.6.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.0.0" />
     <PackageReference Include="NEST" Version="5.5.0" />
   </ItemGroup>
 
